finished identity module